--- a/zentimer/src/main/res/values/strings.xml
+++ b/zentimer/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Zen Timer</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="timer_button_start">Start</string>
+    <string name="timer_button_stop">Stop</string>
 
 </resources>
